--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Space+Grotesk:wght@500&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 // colors
 $green: #38cb89;
 $brand-color: #000;
@@ -6,8 +8,10 @@ $neutral-07100: #141718;
 $primary-white: #fff;
 $neutral-04100: #6c7275;
 $neutral-03100: #e8ecef;
+$neutral-01100: #fefefe;
 // fonts
 $inter-font: "Inter", sans-serif;
 $space-font: "Space Grotesk", sans-serif;
+$popins-font: "Poppins", sans-serif;
 // transition
 $transition: 0.3s all linear;
