--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,3 +11,4 @@
 @import "./components/mobileNavbar";
 @import "./components/cartItemsCounter";
 @import "./components/wishListCounter";
+@import "./components/carousel";
