--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,7 +8,10 @@ $neutral-07100: #141718;
 $primary-white: #fff;
 $neutral-04100: #6c7275;
 $neutral-03100: #e8ecef;
+$neutral-0100: #6c7275;
 $neutral-01100: #fefefe;
+$black-100: #000;
+$black-900: #121212;
 // fonts
 $inter-font: "Inter", sans-serif;
 $space-font: "Space Grotesk", sans-serif;
