--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,7 +4,8 @@
 @import "./base/utilities";
 
 // layouts
-@import "./layouts//featured";
+@import "./layouts/featured";
+@import "./layouts/shopCategories";
 
 // components
 @import "./components/navbar1";
@@ -14,3 +15,4 @@
 @import "./components/wishListCounter";
 @import "./components/carousel";
 @import "./components/featuredItem";
+@import "./components/shopCategory.scss";
