add limited edition section, and count-down-timer

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -12,6 +12,7 @@ $neutral-0100: #6c7275;
 $neutral-01100: #fefefe;
 $black-100: #000;
 $black-900: #121212;
+$black-800: #141718;
 $Neutrals-2: #23262f;
 // fonts
 $inter-font: "Inter", sans-serif;
