--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -7,7 +7,7 @@
 }
 body {
   font-feature-settings: "clig" off, "liga" off;
-  background: #f4f4f4;
+  background: $primary-white;
 }
 // buttons
 button {
