--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -32,8 +32,6 @@
   }
 
   &__img {
-    width: 100%;
-    height: 100%;
     object-fit: contain;
   }
 
@@ -108,17 +106,20 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04);
     z-index: 3;
     transition: $transition;
+    visibility: hidden;
   }
 
   &__arrowLeft {
     position: absolute;
     top: 40%;
+    margin-left: 1rem;
   }
 
   &__arrowRight {
     position: absolute;
     top: 40%;
     right: 0;
+    margin-right: 1rem;
   }
 
   &__next {
@@ -216,6 +217,11 @@
 
 @media screen and (min-width: 1200px) {
   .carousel {
+    &__container {
+      min-height: 47rem;
+      padding: 0;
+    }
+
     &__item {
       padding: 3rem 10rem 0 10rem;
     }
