add collections section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,7 @@
 @import "./layouts/featured";
 @import "./layouts/shopCategories";
 @import "./layouts/limitedEdition";
+@import "./layouts/shopCollections";
 
 // components
 @import "./components/navbar1";
@@ -18,3 +19,4 @@
 @import "./components/featuredItem";
 @import "./components/shopCategory";
 @import "./components/countDownTimer";
+@import "./components/collections";
