add latest articles section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,7 @@
 @import "./layouts/shopCategories";
 @import "./layouts/limitedEdition";
 @import "./layouts/shopCollections";
+@import "./layouts/latestArticles";
 
 // components
 @import "./components/navbar1";
@@ -20,3 +21,4 @@
 @import "./components/shopCategory";
 @import "./components/countDownTimer";
 @import "./components/collections";
+@import "./components/article";
