add newsletter section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,7 @@
 @import "./layouts/limitedEdition";
 @import "./layouts/shopCollections";
 @import "./layouts/latestArticles";
+@import "./layouts/newsletter";
 
 // components
 @import "./components/navbar1";
