add Newsfeed section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,7 @@
 @import "./layouts/shopCollections";
 @import "./layouts/latestArticles";
 @import "./layouts/newsletter";
+@import "./layouts/newsfeed";
 
 // components
 @import "./components/navbar1";
