add Instagram images section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,6 +11,7 @@
 @import "./layouts/latestArticles";
 @import "./layouts/newsletter";
 @import "./layouts/newsfeed";
+@import "./layouts/instagramImg";
 
 // components
 @import "./components/navbar1";
