add footer, complete landing page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,3 +25,4 @@
 @import "./components/countDownTimer";
 @import "./components/collections";
 @import "./components/article";
+@import "./components/footer";
