--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,7 @@
 @import "./layouts/instagramImg";
 
 // components
+@import "./components/brandLogo";
 @import "./components/navbar1";
 @import "./components/navbar2";
 @import "./components/mobileNavbar";
