add register and login pages

--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -5,6 +5,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-feature-settings: "clig" off, "liga" off;
   background: $primary-white;
