--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -10,6 +10,7 @@ $neutral-04100: #6c7275;
 $neutral-03100: #e8ecef;
 $neutral-0100: #6c7275;
 $neutral-01100: #fefefe;
+$neutrals-8: #fcfcfd;
 $black-100: #000;
 $black-900: #121212;
 $black-800: #141718;
