--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,6 +12,7 @@
 @import "./layouts/newsletter";
 @import "./layouts/newsfeed";
 @import "./layouts/instagramImg";
+@import "./layouts/authenticate";
 
 // components
 @import "./components/brandLogo";
