add mini cart layout

--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -12,6 +12,7 @@ html {
 body {
   font-feature-settings: "clig" off, "liga" off;
   background: $primary-white;
+  position: relative;
 }
 // buttons
 button {
