--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,6 +6,7 @@ $green: #38cb89;
 $brand-color: #000;
 $neutral-07100: #141718;
 $primary-white: #fff;
+$primary-red: #e13;
 $neutral-04100: #6c7275;
 $neutral-03100: #e8ecef;
 $neutral-0100: #6c7275;
