--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,7 @@
 @import "./layouts/newsfeed";
 @import "./layouts/instagramImg";
 @import "./layouts/authenticate";
+@import "./layouts/miniCart";
 
 // components
 @import "./components/brandLogo";
@@ -28,3 +29,4 @@
 @import "./components/collections";
 @import "./components/article";
 @import "./components/footer";
+@import "./components/miniCartItems";
