--- a/src/scss/components/_countDownTimer.scss
+++ b/src/scss/components/_countDownTimer.scss
@@ -13,13 +13,19 @@
     flex-wrap: wrap;
   }
 
+  &__timerbox {
+    @include flexJustifyCenterAlignCenter;
+    flex-direction: column;
+  }
+
   &__timer {
     @include flexJustifyCenterAlignCenter;
-    margin-top: 0.75rem;
+    flex-direction: column;
     min-width: 3.75rem;
     min-height: 4rem;
     padding: 0.6875rem 0.5625rem;
     background: $neutral-01100;
+    margin-top: 0.75rem;
   }
 
   &__time {
@@ -30,5 +36,15 @@
     font-weight: 500;
     line-height: 2.375rem;
     letter-spacing: -0.0375rem;
+  }
+
+  &__span {
+    @include gridPlaceContentCenter;
+    color: $primary-white;
+    text-align: center;
+    font-family: $inter-font;
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1.25rem;
   }
 }
