--- a/src/scss/components/_navbar2.scss
+++ b/src/scss/components/_navbar2.scss
@@ -41,21 +41,21 @@
     gap: 1rem;
   }
 
+  &__search {
+    background: transparent;
+  }
+
   &__authBtn {
     display: flex;
     gap: 1rem;
   }
 
   &__logger {
-    @include flexJustifyCenterAlignCenter;
     padding: 0.25rem 0.25rem;
-    gap: 0.25rem;
     align-self: stretch;
-    text-align: center;
-    border-radius: 0.375rem;
     color: $neutral-07100;
     font-family: $space-font;
-    font-size: 0.895rem;
+    font-size: 0.925rem;
     font-style: normal;
     font-weight: 500;
     letter-spacing: -0.025rem;
