--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,7 @@
 @import "./layouts/instagramImg";
 @import "./layouts/authenticate";
 @import "./layouts/miniCart";
+@import "./layouts/productLayout";
 
 // components
 @import "./components/brandLogo";
