--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,14 +7,17 @@ $brand-color: #000;
 $neutral-07100: #141718;
 $primary-white: #fff;
 $primary-red: #e13;
+$neutral-05100: #343839;
 $neutral-04100: #6c7275;
 $neutral-03100: #e8ecef;
 $neutral-0100: #6c7275;
 $neutral-01100: #fefefe;
+$neutral-02100: #f3f5f7;
 $neutrals-8: #fcfcfd;
 $black-100: #000;
 $black-900: #121212;
 $black-800: #141718;
+$black-600: #605f5f;
 $Neutrals-2: #23262f;
 // fonts
 $inter-font: "Inter", sans-serif;
