add user reviews blue print

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,11 +13,14 @@ $neutral-03100: #e8ecef;
 $neutral-0100: #6c7275;
 $neutral-01100: #fefefe;
 $neutral-02100: #f3f5f7;
+$neutrals-2: #23262f;
+$neutrals-3: #353945;
 $neutrals-8: #fcfcfd;
 $black-100: #000;
+$black-500: #807e7e;
+$black-600: #605f5f;
 $black-900: #121212;
 $black-800: #141718;
-$black-600: #605f5f;
 $Neutrals-2: #23262f;
 // fonts
 $inter-font: "Inter", sans-serif;
