add complete blue print of product page

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,6 +15,7 @@ $neutral-01100: #fefefe;
 $neutral-02100: #f3f5f7;
 $neutrals-2: #23262f;
 $neutrals-3: #353945;
+$neutrals-7: #6c7275;
 $neutrals-8: #fcfcfd;
 $black-100: #000;
 $black-500: #807e7e;
