--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -35,3 +35,5 @@
 @import "./components/discountTag";
 @import "./components/reviews";
 @import "./components/review";
+@import "./components/additionalInfo";
+@import "./components/questionProduct";
