--- a/src/scss/layouts/_productLayout.scss
+++ b/src/scss/layouts/_productLayout.scss
@@ -233,6 +233,9 @@
     height: 1.5rem;
     border-radius: 50%;
     background: #000;
+    &--active {
+      outline: 3px solid $neutral-04100;
+    }
   }
 
   // ACTION BUTTONS
@@ -267,6 +270,12 @@
     }
   }
 
+  &__count {
+    font-family: $popins-font;
+    font-size: 0.875rem;
+    color: $brand-color;
+  }
+
   &__wishlist {
     @include flexJustifyCenterAlignCenter;
     padding: 0.25rem 2.5rem;
@@ -289,6 +298,9 @@
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 1.5rem;
+    &:hover {
+      color: $green;
+    }
   }
 
   // CATEGORY INFO
