add shop page with layout

--- a/src/scss/components/navbar1.scss
+++ b/src/scss/components/navbar1.scss
@@ -31,6 +31,7 @@
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 500;
+    color: $brand-color;
     display: none;
     &:hover {
       border-bottom: 1px solid $primary-white;
