--- a/src/scss/layouts/_productLayout.scss
+++ b/src/scss/layouts/_productLayout.scss
@@ -17,6 +17,7 @@
     font-size: 0.75rem;
     font-weight: 500;
     line-height: 1.25rem;
+    background: transparent;
     &--active {
       color: $black-900;
       font-family: $inter-font;
