--- a/src/scss/components/_featuredItem.scss
+++ b/src/scss/components/_featuredItem.scss
@@ -20,142 +20,30 @@
   }
 
   &__wrapper {
+    display: block;
     transition: $transition;
   }
-
-  &__imgBox {
+  &__item {
     width: 12.375rem;
-    height: 17.8125rem;
-    background: url(<path-to-image>), lightgray 19.326px 47.16px no-repeat,
-      #f3f5f7;
-    background-blend-mode: multiply, normal;
-    position: relative;
-  }
-
-  &__img {
-    object-fit: contain;
-  }
-
-  &__heart {
-    @include flexJustifyCenterAlignCenter;
-    width: 2rem;
-    height: 2rem;
-    padding: 0.375rem;
-    gap: 0.625rem;
-    border-radius: 2rem;
-    background: $primary-white;
-    box-shadow: 0px 8px 16px -8px rgba(15, 15, 15, 0.12);
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 1rem 1rem 0 0;
-    visibility: hidden;
-    opacity: 0;
-  }
-
-  &__btn {
-    width: 9.375rem;
-    height: 2rem;
-    padding: 0.21rem 1.5rem;
-    border-radius: 0.5rem;
-    background: $neutral-07100;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04);
-    color: var(--neutral-01100, #fefefe);
-    text-align: center;
-    font-family: $inter-font;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 1.75rem;
-    letter-spacing: -0.025rem;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-bottom: 1rem;
-    transition: $transition;
-    visibility: hidden;
-    opacity: 0;
-    &:hover {
-      background: $green;
-    }
-  }
-
-  // Show Add to wish list and add to cart button
-  &__wrapper:hover &__btn {
-    visibility: visible;
-    opacity: 1;
-  }
-  &__wrapper:hover &__heart {
-    visibility: visible;
-    opacity: 1;
-    z-index: 1;
-  }
-
-  &__desc {
-    margin-top: 0.75rem;
-  }
-
-  &__stars {
-    width: 5.5rem;
-    height: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 0.125rem;
-  }
-
-  &__name {
-    color: $neutral-07100;
-    font-family: $inter-font;
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.625rem;
-  }
-
-  &__prices {
-    display: flex;
-    gap: 0.75rem;
-    margin-top: 0.25rem;
-  }
-
-  &__price {
-    color: $black-900;
-    font-family: $inter-font;
-    font-size: 0.875rem;
-    font-weight: 600;
-    line-height: 1.375rem;
-  }
-
-  &__discount {
-    color: $neutral-04100;
-    font-family: $inter-font;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.375rem;
   }
 }
 
 @media screen and (min-width: 300px) {
   .featuredItem {
-    &__imgBox {
+    &__item {
       width: 17.5rem;
-      height: 22.24338rem;
-    }
-
-    &__btn {
-      width: 12.67413rem;
-      height: 2.53638rem;
     }
   }
 }
+
 @media screen and (min-width: 400px) {
   .featuredItem {
-    &__imgBox {
+    &__item {
       width: 19.5rem;
-      height: 24.24338rem;
     }
   }
 }
+
 @media screen and (min-width: 768px) {
   .featuredItem {
     &::-webkit-scrollbar {
@@ -163,17 +51,11 @@
     }
   }
 }
+
 @media screen and (min-width: 1200px) {
   .featuredItem {
-    &__imgBox {
+    &__item {
       width: 16.375rem;
-      height: 21.8125rem;
-    }
-
-    &__btn {
-      width: 14.375rem;
-      height: 2.875rem;
-      padding: 0.5rem 1.5rem;
     }
   }
 }
