add cart page and cart layout

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -17,7 +17,9 @@ $neutrals-2: #23262f;
 $neutrals-3: #353945;
 $neutrals-7: #6c7275;
 $neutrals-8: #fcfcfd;
+$neutrals-5: #b1b5c3;
 $black-100: #000;
+$black-200: #eaeaea;
 $black-500: #807e7e;
 $black-600: #605f5f;
 $black-900: #121212;
