add cart checkout

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -20,6 +20,7 @@ $neutrals-8: #fcfcfd;
 $neutrals-5: #b1b5c3;
 $black-100: #000;
 $black-200: #eaeaea;
+$black-300: #cbcbcb;
 $black-500: #807e7e;
 $black-600: #605f5f;
 $black-900: #121212;
