--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -49,5 +49,5 @@
 @import "./components/shoppingCart";
 @import "./components/coupon";
 @import "./components/cartSummary";
-@import "./components/checker";
 @import "./components/checkoutTotal";
+@import "./components/checkoutDetail";
