--- a/src/scss/components/_miniCartItems.scss
+++ b/src/scss/components/_miniCartItems.scss
@@ -1,12 +1,10 @@
 .mini {
   display: flex;
-  width: 16rem;
-  height: 46.75rem;
+  width: 100%;
+  height: 100%;
   padding: 1.5rem 0.5rem;
   flex-direction: column;
   justify-content: flex-start;
-  background: $primary-white;
-  position: absolute;
   right: 0;
 
   &__header {
@@ -57,7 +55,9 @@
   }
 
   &__item {
-    @include flexJustifyBetweenAlignCenter;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
     padding: 1.5rem 0rem;
     align-self: stretch;
     border-bottom: 1px solid $neutral-03100;
@@ -75,6 +75,10 @@
     align-self: stretch;
     flex-direction: column;
     gap: 0.5rem;
+  }
+
+  &__sum {
+    align-self: auto;
   }
 
   &__name,
@@ -132,12 +136,60 @@
     padding-right: 1rem;
   }
 
+  // Eternal
+  &__coupon {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 0.75rem;
+    align-self: stretch;
+  }
+
+  &__input {
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+    height: 3.25rem;
+    width: 60%;
+    padding: 0rem 1rem;
+    gap: 0.5rem;
+    border-radius: 0.375rem;
+    border: 1px solid $black-300;
+    background: $primary-white;
+    color: $black-600;
+    font-family: $inter-font;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.625rem;
+  }
+
+  &__apply {
+    @include flexJustifyCenterAlignCenter;
+    gap: 0.5rem;
+    padding: 0.75rem 1.625rem;
+    border-radius: 0.5rem;
+    background: $neutral-07100;
+    align-self: stretch;
+    color: $primary-white;
+    text-align: center;
+    font-family: $inter-font;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.75rem;
+    letter-spacing: -0.025rem;
+  }
+
   &__subText {
     color: $neutral-07100;
     font-family: $inter-font;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.625rem;
+    &--external {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
   }
 
   &__subAmount {
@@ -147,6 +199,9 @@
     font-size: 1rem;
     font-weight: 600;
     line-height: 1.625rem;
+    &--external {
+      color: $green;
+    }
   }
 
   &__cartTotal {
@@ -207,18 +262,11 @@
   }
 }
 
-@media screen and (min-width: 340px) {
-  .mini {
-    width: 20rem;
-  }
-}
 @media screen and (min-width: 380px) {
   .mini {
-    width: 21.4375rem;
-    padding: 1.5rem 0.5rem 1.5rem 1.5rem;
-
     &__desc {
       width: 7rem;
+      padding: 0rem 0.5rem 1.5rem 1.5rem;
     }
   }
 }
