--- a/src/scss/components/cartSummary.scss
+++ b/src/scss/components/cartSummary.scss
@@ -33,57 +33,56 @@
     width: 100%;
   }
 
-  &__total,
-  &__subtotal {
+  &__checker {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 0.8125rem 1rem;
+    margin-top: 1rem;
+    border-radius: 0.25rem;
+    border: 1px solid $neutral-07100;
+    background: transparent;
+    &--active {
+      background: $neutral-02100;
+    }
+  }
+
+  &__check {
     @include flexJustifyBetweenAlignCenter;
     width: 100%;
-    padding: 0.8125rem 0rem;
-    border-bottom: 1px solid $black-200;
   }
 
-  &__total {
-    border: none;
+  &__textBox {
+    display: flex;
+    gap: 1rem;
   }
 
-  &__subText {
+  &__circle {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 6.25rem;
+    border: 1px solid $black-900;
+    position: relative;
+    &--active::after {
+      content: "";
+      width: calc(100% - 0.225rem);
+      height: calc(100% - 0.225rem);
+      background: $black-900;
+      position: absolute;
+      border-radius: 50%;
+      top: 1.6px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  &__amount,
+  &__text {
     color: $neutral-07100;
     font-family: $inter-font;
     font-size: 0.875rem;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1.375rem;
-  }
-
-  &__subAmount {
-    color: $neutral-07100;
-    font-family: $inter-font;
-    font-size: 0.875rem;
-    font-weight: 700;
-    line-height: 1.375rem;
-  }
-
-  &__totalText {
-    color: $neutral-07100;
-    font-family: $inter-font;
-    font-size: 1rem;
-    font-weight: 700;
-    line-height: 1.625rem;
-  }
-
-  &__checkout {
-    margin-top: 2.5rem;
-    width: 100%;
-    @include flexJustifyCenterAlignCenter;
-    padding: 0.625rem 1.625rem;
-    gap: 0.5rem;
-    border-radius: 0.5rem;
-    background: $neutral-07100;
-    color: $primary-white;
-    text-align: center;
-    font-family: $inter-font;
-    font-size: 1.125rem;
-    font-weight: 500;
-    line-height: 2rem;
-    letter-spacing: -0.025rem;
   }
 }
 
@@ -100,22 +99,11 @@
       line-height: 1.75rem;
     }
 
-    &__subText {
+    &__amount,
+    &__text {
       font-size: 1rem;
       font-weight: 400;
       line-height: 1.625rem;
-    }
-
-    &__subAmount {
-      font-size: 1rem;
-      font-weight: 600;
-      line-height: 1.625rem;
-    }
-
-    &__totalText {
-      font-size: 1.25rem;
-      font-weight: 600;
-      line-height: 2rem;
     }
   }
 }
