add order complete

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -51,3 +51,4 @@
 @import "./components/cartSummary";
 @import "./components/checkoutTotal";
 @import "./components/checkoutDetail";
+@import "./components/orderComplete";
