add my account interface

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,6 +19,7 @@
 @import "./layouts/shopLayout";
 @import "./layouts/allProducts";
 @import "./layouts/checkoutSteps";
+@import "./layouts/profileLayout";
 
 // components
 @import "./components/brandLogo";
@@ -52,3 +53,4 @@
 @import "./components/checkoutTotal";
 @import "./components/checkoutDetail";
 @import "./components/orderComplete";
+@import "./components/account";
