--- a/src/scss/components/orders.scss
+++ b/src/scss/components/orders.scss
@@ -5,10 +5,77 @@
     font-size: 1.25rem;
     font-weight: 600;
     line-height: 2rem;
+    margin-bottom: 2.5rem;
+  }
+
+  &__container {
+    width: 100%;
+  }
+
+  &__wrapper {
+    width: 100%;
+    padding: 1rem 0rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+    border-bottom: 1px solid $neutral-03100;
+    &--lg {
+      display: none;
+    }
+  }
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    &--lg {
+      display: none;
+    }
+  }
+
+  &__name {
+    color: $neutral-04100;
+    font-family: $inter-font;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.375rem;
+    &--value {
+      color: $neutral-07100;
+    }
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .orders {
+    &__wrapper {
+      width: 42rem;
+      flex-direction: row;
+      gap: 0;
+      border-bottom: none;
+      &--lg {
+        display: flex;
+      }
+    }
+
+    &__list {
+      grid-template-columns: 1fr;
+    }
+
+    &__name {
+      border-bottom: 1px solid $neutral-03100;
+      display: none;
+      &--value {
+        display: flex;
+        border-bottom: none;
+      }
+      &--header {
+        display: flex;
+      }
+    }
   }
 }
