--- a/src/scss/components/orders.scss
+++ b/src/scss/components/orders.scss
@@ -71,10 +71,11 @@
       display: none;
       &--value {
         display: flex;
-        border-bottom: none;
+        padding-bottom: 0.5rem;
       }
       &--header {
         display: flex;
+        padding-bottom: 0.5rem;
       }
     }
   }
