--- a/src/scss/components/wishlist.scss
+++ b/src/scss/components/wishlist.scss
@@ -5,10 +5,147 @@
     font-size: 1.25rem;
     font-weight: 600;
     line-height: 2rem;
+    margin-bottom: 2.5rem;
+  }
+
+  &__wrapper {
+    width: 100%;
+    padding: 1rem 0rem;
+    border-bottom: 1px solid $neutral-03100;
+  }
+
+  &__name {
+    color: $neutral-04100;
+    font-family: $inter-font;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.375rem;
+    display: none;
+    &--header {
+      display: block;
+    }
+  }
+
+  &__item {
+    display: flex;
+    padding: 1rem 0rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+    border-bottom: 1px solid $neutral-03100;
+  }
+
+  &__productWrapper {
+    display: flex;
+    gap: 1rem;
+  }
+
+  &__product {
+    @include flexJustifyCenterAlignCenter;
+    gap: 1rem;
+  }
+
+  &__removeBtn {
+    background: transparent;
+    align-self: stretch;
+  }
+
+  &__imgBox {
+    width: 3.75rem;
+    height: 4.5rem;
+  }
+
+  &__itemName {
+    color: $neutral-07100;
+    font-family: $inter-font;
+    font-size: 0.875rem;
+    font-weight: 600;
+    line-height: 1.375rem;
+  }
+
+  &__color {
+    color: $neutral-04100;
+    font-family: $inter-font;
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1.25rem;
+  }
+
+  &__price {
+    color: $neutral-07100;
+    font-family: $inter-font;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.375rem;
+    &--lg {
+      display: none;
+    }
+  }
+
+  &__actionBtn {
+    @include flexJustifyCenterAlignCenter;
+    gap: 0.5rem;
+    width: 100%;
+    max-width: 20rem;
+    margin: 0 auto;
+    padding: 0.375rem 1.5rem;
+    color: $primary-white;
+    text-align: center;
+    font-family: $inter-font;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.75rem;
+    letter-spacing: -0.025rem;
+    border-radius: 0.5rem;
+    background: $neutral-07100;
+    &:hover {
+      color: $primary-red;
+    }
   }
 }
 
-@media screen and (min-width: 768px) {
+// @media screen and (min-width: 768px) {
+//   .wishlist {
+//   }
+// }
+
+@media screen and (min-width: 1200px) {
   .wishlist {
+    &__wrapper {
+      width: 42rem;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__name {
+      display: block;
+      &--price {
+        margin-left: 1.5rem;
+      }
+    }
+
+    &__item {
+      width: 42rem;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    &__price {
+      align-self: center;
+      &--sm {
+        display: none;
+      }
+      &--lg {
+        display: block;
+        margin-left: 1.5rem;
+      }
+    }
+
+    &__actionBtn {
+      align-self: center;
+    }
   }
 }
