add contact page interface and services component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -21,6 +21,8 @@
 @import "./layouts/checkoutSteps";
 @import "./layouts/profileLayout";
 @import "./layouts/blogLayout";
+@import "./layouts/contactLayout";
+@import "./layouts/services";
 
 // components
 @import "./components/brandLogo";
