--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -17,6 +17,7 @@ $neutrals-2: #23262f;
 $neutrals-3: #353945;
 $neutrals-7: #6c7275;
 $neutrals-8: #fcfcfd;
+$neutrals-9: #f3f5f7;
 $neutrals-5: #b1b5c3;
 $black-100: #000;
 $black-200: #eaeaea;
