add single blog page with styled interface as well as redirect file

--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -26,6 +26,8 @@
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 1.5rem;
+    width: fit-content;
+    align-self: flex-start;
     background: transparent;
     border-bottom: 1px solid $neutral-07100;
   }
