--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,6 +23,7 @@
 @import "./layouts/blogLayout";
 @import "./layouts/contactLayout";
 @import "./layouts/services";
+@import "./layouts/singleBlogLayout";
 
 // components
 @import "./components/brandLogo";
