add main navbar drop-down

--- a/src/scss/components/_navbar2.scss
+++ b/src/scss/components/_navbar2.scss
@@ -3,6 +3,7 @@
   padding: 1rem 1rem;
   background: $primary-white;
   @include flexJustifyBetweenAlignCenter;
+  position: relative;
 
   &__brand {
     @include flexJustifyCenterAlignCenter;
