--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -65,3 +65,5 @@
 @import "./components/showMore";
 @import "./components/allBlog";
 @import "./components/blogItem";
+@import "./components/shopSubMenu";
+@import "./components/productSubMenu";
