add product search bar for big screens

--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -1,8 +1,8 @@
 /* Apply a subtle box shadow on hover */
-input[type="text"]:hover,
-:hover {
-  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
+// input[type="text"]:hover,
+// :hover {
+//   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+// }
 
 // MINXIN
 @mixin flexJustifyCenterAlignCenter {
