--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -67,3 +67,4 @@
 @import "./components/blogItem";
 @import "./components/shopSubMenu";
 @import "./components/productSubMenu";
+@import "./components/searchProduct";
