implements almost all the functionality needed, with just a few left

--- a/src/scss/components/_miniCartItems.scss
+++ b/src/scss/components/_miniCartItems.scss
@@ -54,6 +54,13 @@
     }
   }
 
+  &__empty {
+    margin-top: 4rem;
+    color: $neutrals-7;
+    font-family: $inter-font;
+    font-size: 1.875rem;
+  }
+
   &__item {
     display: flex;
     justify-content: space-between;
