--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,7 +12,7 @@
 @import "./layouts/newsletter";
 @import "./layouts/newsfeed";
 @import "./layouts/instagramImg";
-@import "./layouts/authenticate";
+@import "./layouts/registerLayout";
 @import "./layouts/miniCart";
 @import "./layouts/productLayout";
 @import "./layouts/userRemark";
@@ -68,3 +68,4 @@
 @import "./components/shopSubMenu";
 @import "./components/productSubMenu";
 @import "./components/searchProduct";
+@import "./components/spinner";
