--- a/src/scss/components/checkoutDetail.scss
+++ b/src/scss/components/checkoutDetail.scss
@@ -1,4 +1,6 @@
 .details {
+  margin-bottom: 10rem;
+  position: relative;
   &__tittle {
     color: $neutral-07100;
     font-family: $inter-font;
@@ -8,7 +10,7 @@
   }
 
   &__form {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
   }
 
   &__formWrapper {
@@ -83,6 +85,57 @@
     }
   }
 
+  &__selectContent {
+    @include flexJustifyBetweenAlignCenter;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    cursor: pointer;
+  }
+
+  &__countrySelected {
+    color: $neutral-04100;
+    font-family: $inter-font;
+    font-size: 0.75rem;
+    font-weight: 700;
+    line-height: 0.75rem;
+    text-transform: uppercase;
+  }
+
+  &__countries {
+    display: none;
+    gap: 0.25rem;
+    flex-direction: column;
+    min-width: 100%;
+    min-height: 5rem;
+    height: 15rem;
+    background: $primary-white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateY(100%);
+    z-index: 2;
+    padding: 1rem;
+    overflow-y: scroll;
+    &--show {
+      display: flex;
+    }
+  }
+
+  &__country {
+    display: flex;
+    gap: 0.75rem;
+    padding: 0.75rem 0;
+    cursor: pointer;
+    &:hover {
+      background: $neutral-02100;
+    }
+  }
+
+  &__countryImg {
+    width: 2rem;
+  }
+
   &__label {
     color: $neutral-04100;
     font-family: $inter-font;
@@ -92,6 +145,15 @@
     text-transform: uppercase;
     display: block;
     align-self: stretch;
+    transition: $transition;
+    &--test {
+      @include flexJustifyBetweenAlignCenter;
+      flex-wrap: wrap;
+      gap: 1rem;
+      animation-name: zoomOut;
+      animation-duration: 0.5s;
+      animation-iteration-count: infinite;
+    }
   }
 
   &__input {
@@ -119,6 +181,9 @@
     &--activePay {
       background: $neutral-02100;
       padding-left: 4rem;
+    }
+    &--error {
+      border: 1px solid $primary-red;
     }
   }
 
@@ -170,12 +235,8 @@
     height: 1px;
   }
 
-  &__miniCart {
-    width: 100%;
-    border-radius: 0.25rem;
-    border: 1px solid $neutral-04100;
-    height: fit-content;
-    margin-bottom: 1.5rem;
+  &__testCvc {
+    margin-left: 1.5rem;
   }
 
   &__submit {
@@ -194,21 +255,43 @@
     font-weight: 500;
     line-height: 1.75rem;
     letter-spacing: -0.025rem;
+    position: absolute;
+    bottom: -5rem;
+  }
+
+  &__miniCart {
+    width: 100%;
+    border-radius: 0.25rem;
+    border: 1px solid $neutral-04100;
+    height: fit-content;
+    margin-bottom: 1.5rem;
+  }
+}
+
+@keyframes zoomOut {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
   }
 }
 
 @media screen and (min-width: 768px) {
   .details {
-    &__container {
-      display: flex;
-    }
-
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 5rem;
     &__tittle {
       color: $brand-color;
       font-family: $popins-font;
       font-size: 1.25rem;
       font-weight: 500;
       line-height: 1.75rem;
+    }
+
+    &__form {
+      margin-bottom: 4rem;
     }
 
     &__section {
@@ -234,12 +317,15 @@
 
     &__submit {
       width: 400px;
+      bottom: 0;
     }
   }
 }
 
 @media screen and (min-width: 900px) {
   .details {
+    gap: 4rem;
+
     &__section {
       width: 550px;
     }
