--- a/src/scss/components/wishlist.scss
+++ b/src/scss/components/wishlist.scss
@@ -103,6 +103,17 @@
       color: $primary-red;
     }
   }
+
+  &__empty {
+    display: grid;
+    place-content: center;
+    height: 18rem;
+    color: $neutral-04100;
+    font-family: $inter-font;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.375rem;
+  }
 }
 
 // @media screen and (min-width: 768px) {
