--- a/src/scss/components/_mobileNavbar.scss
+++ b/src/scss/components/_mobileNavbar.scss
@@ -86,13 +86,15 @@
     max-width: 18.4375rem;
     padding-bottom: 0.5rem;
     @include flexJustifyBetweenAlignCenter;
+    flex-direction: column;
     gap: 0.625rem;
     height: 2rem;
     align-self: stretch;
     border-bottom: 1px solid $neutral-03100;
     transition: $transition;
-    &:hover {
-      background: lighten($color: $neutral-07100, $amount: 85);
+    overflow: hidden;
+    &--open {
+      height: auto;
     }
   }
 
@@ -109,6 +111,44 @@
     font-size: 0.875rem;
     font-weight: 500;
     background: transparent;
+    @include flexJustifyBetweenAlignCenter;
+    width: 100%;
+    &:hover {
+      background: lighten($color: $neutral-07100, $amount: 85);
+    }
+  }
+
+  &__subItem {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+    width: 100%;
+  }
+
+  &__subTopic {
+    color: $neutral-04100;
+    font-family: $inter-font;
+    font-size: 1.1rem;
+    font-weight: 500;
+    letter-spacing: -0.025rem;
+    margin: 0.75rem;
+    display: block;
+  }
+
+  &__sub {
+    color: $neutral-07100;
+    font-family: $inter-font;
+    font-size: 0.875rem;
+    font-weight: 500;
+    background: transparent;
+    padding: 0.5rem 0;
+    text-align: left;
+    width: 100%;
+    &:hover {
+      background: lighten($color: $neutral-07100, $amount: 85);
+    }
   }
 
   &__bottom {
