add max width to the html body element

--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -13,6 +13,8 @@ body {
   font-feature-settings: "clig" off, "liga" off;
   background: $primary-white;
   position: relative;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 // buttons
 button {
